--- a/about.html
+++ b/about.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
+    <header>
     <h1>AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="about.html" class="active">About</a>
         <a href="services.html">Services</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
-</header>
-
-<section class="content">
-    <h2>About Us</h2>
-    <p>AstroBotix Labs is dedicated to providing high-quality STEM and astronomy-based learning programs. Our mission is to inspire students to explore robotics, space science, and technology with hands-on learning.</p>
-</section>
-
-<footer>
-    <p>© 2025 AstroBotix Labs. All rights reserved.</p>
-</footer>
+    </header>
+    <section class="content">
+        <div class="panel">
+            <h2>About Us</h2>
+            <p>AstroBotix Labs is dedicated to providing high-quality STEM and astronomy-based learning programs. Our mission is to inspire students to explore robotics, space science, and technology with hands-on learning. We are preparing the next generation of engineers and astrophysicists.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
+    </footer>
 </body>
 </html>
