--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>AstroBotix Labs</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
             <a href="projects.html">Projects</a>
@@ -20,11 +21,11 @@
 
     <section class="hero">
         <h2>STEM Learning & Astronomy Education</h2>
-        <p>Empowering young innovators through robotics, astronomy and hands-on STEM experiences.</p>
+        <p>Empowering young innovators through robotics, astronomy and hands-on STEM experiences. Prepare for launch.</p>
     </section>
 
     <footer>
-        <p>© 2025 AstroBotix Labs. All rights reserved.</p>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
     </footer>
 </body>
 </html>
