--- a/services.html
+++ b/services.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-
-<header>
+    <header>
     <h1>AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="services.html">Services</a>
+        <a href="services.html" class="active">Services</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
-</header>
-
-<section class="content">
-    <h2>Our Services</h2>
-    <ul>
-        <li>STEM Workshops for Schools</li>
-        <li>Astronomy Camps & Stargazing Events</li>
-        <li>Robotics & Coding Courses</li>
-        <li>Custom Science Projects & Kits</li>
-    </ul>
-</section>
-
-<footer>
-    <p>© 2025 AstroBotix Labs. All rights reserved.</p>
-</footer>
-
+    </header>
+    <section class="content">
+        <div class="panel">
+            <h2>Our Services</h2>
+            <ul>
+                <li><i class="fas fa-microchip"></i> STEM Workshops for Schools</li>
+                <li><i class="fas fa-telescope"></i> Astronomy Camps & Stargazing Events</li>
+                <li><i class="fas fa-robot"></i> Robotics & Coding Courses</li>
+                <li><i class="fas fa-flask"></i> Custom Science Projects & Kits</li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
+    </footer>
 </body>
 </html>
