--- a/projects.html
+++ b/projects.html
@@ -5,28 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<header>
+    <header>
     <h1>AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
-        <a href="projects.html">Projects</a>
+        <a href="projects.html" class="active">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
-</header>
-
-<section class="content">
-    <h2>Our Projects</h2>
-    <p>A showcase of our robotics builds, astronomy observations, and STEM innovations.</p>
-</section>
-
-<footer>
-    <p>© 2025 AstroBotix Labs. All rights reserved.</p>
-</footer>
-
+    </header>
+    <section class="content">
+        <div class="panel">
+            <h2>Our Projects</h2>
+            <p>A showcase of our robotics builds, astronomy observations, and STEM innovations. Data feeds are being initialized...</p>
+            </div>
+    </section>
+    <footer>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
+    </footer>
 </body>
 </html>
