--- a/contact.html
+++ b/contact.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<header>
+    <header>
     <h1>AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
-</header>
-
-<section class="content">
-    <h2>Contact Us</h2>
-    <p>Email: info@astrobotixlabs.com</p>
-    <p>Phone: +91-9557684744</p>
-</section>
-
-<footer>
-    <p>© 2025 AstroBotix Labs. All rights reserved.</p>
-</footer>
-
+    </header>
+    <section class="content">
+        <div class="panel">
+            <h2>Contact Us</h2>
+            <p>Transmission initiated. Connect with our command center:</p>
+            <p>Email: info@astrobotixlabs.com</p>
+            <p>Phone: +91-0000000000</p>
+        </div>
+    </section>
+    <footer>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
+    </footer>
 </body>
 </html>
