--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> 
 </head>
 <body>
     <header>
-        <h1>AstroBotix Labs</h1>
+        <h1><i class="fas fa-robot"></i> AstroBotix Labs</h1>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
