--- a/about.html
+++ b/about.html
@@ -6,10 +6,11 @@
     <title>About - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
-    <h1>AstroBotix Labs</h1>
+    <h1><i class="fas fa-robot"></i> AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
@@ -19,10 +20,22 @@
     </nav>
     </header>
     <section class="content">
-        <div class="panel">
-            <h2>About Us</h2>
-            <p>AstroBotix Labs is dedicated to providing high-quality STEM and astronomy-based learning programs. Our mission is to inspire students to explore robotics, space science, and technology with hands-on learning. We are preparing the next generation of engineers and astrophysicists.</p>
+        <div class="panel span-2">
+            <h2>Our Mission Statement</h2>
+            <p>AstroBotix Labs is dedicated to providing high-quality STEM and astronomy-based learning programs. Our core mission is to inspire students to explore robotics, space science, and technology with hands-on learning, fueling the next generation of space innovators.</p>
         </div>
+
+        <div class="panel">
+            <h2><i class="fas fa-chart-line"></i> Students Reached</h2>
+            <p style="font-size: 2em; color: var(--color-accent); font-family: var(--font-heading);">4,200+</p>
+            <p>Empowering young minds since 2023.</p>
+        </div>
+
+        <div class="panel">
+            <h2><i class="fas fa-lightbulb"></i> Philosophy</h2>
+            <p>We believe in learning by doing. Our programs are project-based, emphasizing critical thinking and collaborative problem-solving, preparing students for future tech careers.</p>
+        </div>
+
     </section>
     <footer>
         <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
