--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
     <title>Contact - AstroBotix Labs</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
-    <h1>AstroBotix Labs</h1>
+    <h1><i class="fas fa-robot"></i> AstroBotix Labs</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -19,12 +20,25 @@
     </nav>
     </header>
     <section class="content">
-        <div class="panel">
-            <h2>Contact Us</h2>
+        <div class="panel span-2">
+            <h2><i class="fas fa-envelope"></i> Primary Contact Channel</h2>
             <p>Transmission initiated. Connect with our command center:</p>
-            <p>Email: info@astrobotixlabs.com</p>
-            <p>Phone: +91-0000000000</p>
+            <p><strong>Email:</strong> info@astrobotixlabs.com</p>
+            <p><strong>Phone:</strong> +91-0000000000</p>
         </div>
+
+        <div class="panel row-span-2" style="background-color: var(--color-bg);">
+            <h2><i class="fas fa-map-marker-alt"></i> Location</h2>
+            <p>Map Placeholder/Location Graphic goes here.</p>
+            <p style="font-size: 0.8em; margin-top: 20px;">*Digital address link available upon request.</p>
+        </div>
+        
+        <div class="panel">
+            <h2><i class="fas fa-clock"></i> Operating Hours</h2>
+            <p>Mon - Fri: 9:00 AM - 5:00 PM IST</p>
+            <p>Sat: By Appointment (for Stargazing)</p>
+        </div>
+        
     </section>
     <footer>
         <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
