--- a/services.html
+++ b/services.html
@@ -1,37 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - AstroBotix Labs</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
-<body>
-    <header>
-    <h1>AstroBotix Labs</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html" class="active">Services</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    </header>
-    <section class="content">
-        <div class="panel">
-            <h2>Our Services</h2>
-            <ul>
-                <li><i class="fas fa-microchip"></i> STEM Workshops for Schools</li>
-                <li><i class="fas fa-telescope"></i> Astronomy Camps & Stargazing Events</li>
-                <li><i class="fas fa-robot"></i> Robotics & Coding Courses</li>
-                <li><i class="fas fa-flask"></i> Custom Science Projects & Kits</li>
+<section class="content">
+    <div class="panel span-2"> 
+        <h2>Our Services: Initializing Data Blocks</h2>
+        <ul id="service-list">
             </ul>
-        </div>
-    </section>
-    <footer>
-        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
-    </footer>
-</body>
-</html>
+    </div>
+    <div class="panel">
+        <h2>Next Session</h2>
+        <p>Robotics Basics:</p>
+        <p style="color: var(--color-accent);">15 Jan 2026</p>
+    </div>
+</section>
