--- a/services.html
+++ b/services.html
@@ -1,12 +1,85 @@
-<section class="content">
-    <div class="panel span-2"> 
-        <h2>Our Services: Initializing Data Blocks</h2>
-        <ul id="service-list">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services - AstroBotix Labs</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body>
+    <header>
+    <h1><i class="fas fa-robot"></i> AstroBotix Labs</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html" class="active">Services</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    </header>
+    <section class="content">
+        <div class="panel span-2">
+            <h2>Our Services: Initializing Data Blocks</h2>
+            <ul id="service-list">
+                <li class="service-item">
+                    <div class="service-title">
+                        <i class="fas fa-microchip"></i> STEM Workshops for Schools 
+                        <span class="indicator fas fa-chevron-down"></span>
+                    </div>
+                    <div class="details-content">
+                        <p>We deliver engaging, curriculum-aligned STEM workshops focused on real-world applications of science, technology, and engineering. Perfect for K-12 students seeking hands-on learning experiences.</p>
+                        <p>Focus Areas: Circuitry, Renewable Energy, Physics.</p>
+                    </div>
+                </li>
+
+                <li class="service-item">
+                    <div class="service-title">
+                        <i class="fas fa-telescope"></i> Astronomy Camps & Stargazing Events
+                        <span class="indicator fas fa-chevron-down"></span>
+                    </div>
+                    <div class="details-content">
+                        <p>Explore the cosmos! Our camps offer instruction in telescopic observation, celestial navigation, and space science theory. Events are hosted under optimal viewing conditions.</p>
+                        <p>Focus Areas: Planetary Science, Astrophotography, Data Analysis.</p>
+                    </div>
+                </li>
+
+                <li class="service-item">
+                    <div class="service-title">
+                        <i class="fas fa-robot"></i> Robotics & Coding Courses
+                        <span class="indicator fas fa-chevron-down"></span>
+                    </div>
+                    <div class="details-content">
+                        <p>From block programming for beginners to advanced Python and C++ for machine control. Students learn to build, program, and test autonomous robotic systems.</p>
+                        <p>Focus Areas: Algorithmic Thinking, Microcontroller Programming, Sensor Integration.</p>
+                    </div>
+                </li>
+
+                <li class="service-item">
+                    <div class="service-title">
+                        <i class="fas fa-flask"></i> Custom Science Projects & Kits
+                        <span class="indicator fas fa-chevron-down"></span>
+                    </div>
+                    <div class="details-content">
+                        <p>We design custom kits and projects for science fairs, clubs, or individual study, providing all components and detailed documentation for successful completion.</p>
+                        <p>Focus Areas: Prototyping, 3D Design, Materials Science.</p>
+                    </div>
+                </li>
             </ul>
-    </div>
-    <div class="panel">
-        <h2>Next Session</h2>
-        <p>Robotics Basics:</p>
-        <p style="color: var(--color-accent);">15 Jan 2026</p>
-    </div>
-</section>
+        </div>
+        
+        <div class="panel">
+            <h2>Next Session</h2>
+            <p>Robotics Basics:</p>
+            <p style="color: var(--color-accent);">15 Jan 2026</p>
+            <p style="font-size: 0.8em; margin-top: 15px;">Enrollment Code: STEM-26</p>
+        </div>
+
+    </section>
+    <script src="app.js"></script> 
+    <footer>
+        <p>© 2025 AstroBotix Labs. All rights reserved. | System Status: ONLINE</p>
+    </footer>
+</body>
+</html>
