--- a/services.html
+++ b/services.html
@@ -7,31 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Local fix to ensure the accordion works even if styles.css is cached */
-        .details-content {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.4s ease-out;
-            background: rgba(0, 234, 255, 0.05);
-        }
-        .service-item.active .details-content {
-            max-height: 500px; /* Adjust based on content length */
-            padding: 15px;
-        }
-        .service-item.active .indicator {
-            transform: rotate(180deg);
-            color: var(--color-accent);
-        }
-        .service-title {
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 0;
-            border-bottom: 1px solid var(--color-border);
-        }
-    </style>
 </head>
 <body>
 
@@ -48,36 +23,36 @@
 
     <main class="content">
         <div class="panel span-2">
-            <h2>Our Services: Initializing Data Blocks</h2>
-            <ul class="services-list" style="list-style: none; padding: 0;">
-                
-                <li class="service-item">
-                    <div class="service-title">
-                        <span><i class="fas fa-microchip"></i> STEM Workshops for Schools</span>
-                        <i class="fas fa-chevron-down indicator"></i>
-                    </div>
-                    <div class="details-content">
-                        <p>We deliver engaging, curriculum-aligned STEM workshops focused on real-world applications of robotics and space science.</p>
-                    </div>
-                </li>
-
-                <li class="service-item">
-                    <div class="service-title">
-                        <span><i class="fas fa-user-astronaut"></i> Astronomy & Space Observation</span>
-                        <i class="fas fa-chevron-down indicator"></i>
-                    </div>
-                    <div class="details-content">
-                        <p>Night sky navigation, telescope operation, and deep-space astrophotography sessions.</p>
-                    </div>
-                </li>
-
-            </ul>
+            <h2>Our Services: Data Modules</h2>
+            <p>Select a module to view specialized STEM and Astronomy training capabilities.</p>
         </div>
 
         <div class="panel">
-            <h2>Next Session</h2>
-            <p>Robotics Basics:</p>
-            <p class="status-glow">15 Jan 2026</p>
+            <h3><i class="fas fa-microchip"></i> STEM Workshops</h3>
+            <p>Curriculum-aligned sessions focused on real-world applications of robotics and space science for schools and institutions.</p>
+        </div>
+
+        <div class="panel">
+            <h3><i class="fas fa-user-astronaut"></i> Space Observation</h3>
+            <p>Night sky navigation, telescope operation, and deep-space astrophotography sessions guided by experts.</p>
+        </div>
+
+        <div class="panel">
+            <h3><i class="fas fa-robot"></i> Robotics & Coding</h3>
+            <p>From block programming to advanced Python. Learn to build and test autonomous robotic systems and rovers.</p>
+        </div>
+
+        <div class="panel">
+            <h3><i class="fas fa-flask"></i> Project Kits</h3>
+            <p>Custom-designed hardware kits for science fairs and clubs, providing all necessary components and documentation.</p>
+        </div>
+
+        <div class="panel span-2">
+            <h2>Ready to Initialize?</h2>
+            <p>Contact our lab to schedule a session or request a custom kit.</p>
+            <div class="contact-buttons">
+                <a href="mailto:vatsalgarg@astrobotixlabs.com" class="btn">Send Transmission</a>
+            </div>
         </div>
     </main>
 
@@ -91,18 +66,5 @@
         </div>
     </footer>
 
-    <script>
-        // Use DOMContentLoaded to make sure the script runs AFTER the page loads
-        document.addEventListener('DOMContentLoaded', () => {
-            const items = document.querySelectorAll('.service-item');
-            
-            items.forEach(item => {
-                item.addEventListener('click', () => {
-                    item.classList.toggle('active');
-                    console.log('Clicked:', item.querySelector('.service-title').innerText);
-                });
-            });
-        });
-    </script>
 </body>
 </html>
